@@ -10,7 +10,10 @@
 
 For more details, please see the README file.
 
-December ,2020, AnnotSV version 3.0
+	- feat: Rename of the "TS_CGscore" and "HI_CGscore" columns:
+		The "TS_CGscore" column has been renamed "TS"
+		The "HI_CGscore" column has been renamed "HI"
+	- feat: Update of the Exomiser data source 
 	- feat: Add pathogenic SV annotation (from multiple sources)
 	        - Pathogenic SV sources: dbVar, ClinGen, ClinVar
 		- Add 12 annotation columns: P_gain_phen; P_gain_hpo; P_gain_source; P_gain_coord; P_loss_phen;P_loss_hpo; P_loss_source; P_loss_coord; 
